--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@prisma/client": "^4.1.1",
     "chakra-ui": "^0.3.9",
     "framer-motion": "^7.0.0",
     "next": "12.2.4",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4"
+    "eslint-config-next": "12.2.4",
+    "prisma": "^4.1.1"
   }
 }
