--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test":"jest --watch"
+    "test": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@prisma/client": "^4.1.1",
-    "chakra-ui": "^0.3.9",
+    "axios": "^0.27.2",
     "framer-motion": "^7.0.0",
     "next": "12.2.4",
     "react": "18.2.0",
